# postgen

./: .env.example  .gitignore  Dockerfile  README.md  REFACTORING_PLAN.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  supervisord.conf  test_e2e_image_gen.sh  vite.config.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  requests.py  responses.py
backend/app/routers/: __init__.py  analysis.py  speech.py
backend/app/services/: __init__.py  retry.py  scrapecreators.py  summarization.py  supabase.py  youtube_api.py  youtube_frames.py  youtube_transcript.py
src/: App.tsx  index.css
src/components/: AnalysisModal.tsx  CameraModal.tsx  ContentAnalyzer.tsx  ImageGenerationModal.tsx  TextGenerationModal.tsx
src/components/ui/: button.tsx
src/hooks/: useContentAnalysis.ts  useGeneration.ts  useSession.ts  useUser.ts  useVoiceInput.ts
src/integrations/supabase/: client.ts
src/lib/: api.ts  i18n.ts
src/types/: index.ts
workflows/: post_image_generator_backup.json  post_image_generator_modified.json
